--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "heroicons-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "tailwindcss build frontend/site.css -c frontend/tailwind.config.js -o static/site.css",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
