--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "tailwindcss build frontend/site.css -c frontend/tailwind.config.js -o static/site.css",
+    "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
